--- a/index.html
+++ b/index.html
@@ -22,67 +22,54 @@
 <body ng-controller="MainController as main">
 
 <div class="row" ng-show="1==1">
-    <div class="large-12 columns">
-        <h1>Welcome to BuzzStop</h1>
-        <div class="panel">
-            <h3>We&rsquo;re stoked you want to try Foundation! </h3>
-            <p>To get going, this file (index.html) includes some basic styles you can modify, play around with, or totally destroy to get going.</p>
-            <p>Once you've exhausted the fun in this document, you should check out:</p>
-            <div class="row">
-                <div class="large-4 medium-4 columns">
-                    <p><a href="http://foundation.zurb.com/docs">Foundation Documentation</a><br />Everything you need to know about using the framework.</p>
-                </div>
-                <div class="large-4 medium-4 columns">
-                    <p><a href="http://github.com/zurb/foundation">Foundation on Github</a><br />Latest code, issue reports, feature requests and more.</p>
-                </div>
-                <div class="large-4 medium-4 columns">
-                    <p><a href="http://twitter.com/foundationzurb">@foundationzurb</a><br />Ping us on Twitter if you have questions. If you build something with this we'd love to see it (and send you a totally boss sticker).</p>
-                </div>
-            </div>
-        </div>s
-    </div>
+<div class="large-12 columns">
+<h1 style="color:red;">BuzzStop</h1>
+</div>
 </div>
 
+<div class="row" ng-show="main.routeId == 0">
+    <div class="large-12 columns">
+        <div class="panel">
 
-
-<div class="row" ng-show="1==0">
-    <div class="large-3 medium-3 small-12 columns animate" ng-repeat="(key, light) in main.lighting">
-        <div class=" switch panel animate" ng-class="{on: light.status==true}">
-
-            <div class="visible-for-medium-up">
-                <p class="animate">{{light.label}}</p>
-                <div class="switch round large">
-                    <input ng-change="main.update(key)" ng-model="light.status" id="exampleRadioSwitch{{light.id}}" type="checkbox" name="testGroup" ng-checked="light.status == 1">
-                    <label for="exampleRadioSwitch{{light.id}}"></label>
+            <div class="row">
+                <div class="large-4 medium-6 small-12 columns">
+                    <h3>Choose your route</h3>
                 </div>
             </div>
-            <div class="visible-for-small-down">
-                <div class="row">
-                    <div class="column small-4">
-                        <div class="switch round large pull-0">
-                            <input ng-model="light.status" id="exampleRadioSwitch{{light.id}}" type="checkbox" name="testGroup"  ng-checked="light.status == 1">
-                            <label for="exampleRadioSwitch{{light.id}}"></label>
-                        </div>
-                    </div>
-                    <div class="column small-8">
-                        <p class="pull">{{light.label}}</p>
-                    </div>
+            <div class="row">
+                <div class="large-4 medium-6 small-12 columns">
+                <ul class="list" >
+                    <li ng-click="main.routeId=route.id" ng-repeat="route in main.routes"><a href="#">{{route.name}}</a></li>
+
+                </ul>
                 </div>
             </div>
+            <div class="row">
 
+            </div>
         </div>
     </div>
-
 </div>
 
 
-
-<div class="row">
+<div class="row" ng-show="main.routeId > 0">
     <div class="large-12 columns">
+        <span class="label">Wow. Such Demo.</span>
         <div class="panel">
-            <h3>We&rsquo;re stoked you want to try Foundation! </h3>
-            <p>To get going, this file (index.html) includes some basic styles you can modify, play around with, or totally destroy to get going.</p>
-            <p>Once you've exhausted the fun in this document, you should check out:</p>
+
+            <div class="row">
+                <div class="large-4 medium-6 small-12 columns">
+                    <h3>Your chosen route ({{main.route.name}})</h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="large-4 medium-6 small-12 columns">
+                    <ul class="list" >
+                        <li ng-repeat="route in main.routes"><a href="#">{{route.name}}</a></li>
+
+                    </ul>
+                </div>
+            </div>
             <div class="row">
                 <div class="large-4 medium-4 columns">
                     <p><a href="http://foundation.zurb.com/docs">Foundation Documentation</a><br />Everything you need to know about using the framework.</p>
@@ -98,126 +85,9 @@
     </div>
 </div>
 
-<div class="row">
-    <div class="large-8 medium-8 columns">
-        <h5>Here&rsquo;s your basic grid:</h5>
-        <!-- Grid Example -->
 
-        <div class="row">
-            <div class="large-12 columns">
-                <div class="callout panel">
-                    <p><strong>This is a twelve column section in a row.</strong> Each of these includes a div.panel element so you can see where the columns are - it's not required at all for the grid.</p>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="large-6 medium-6 columns">
-                <div class="callout panel">
-                    <p>Six columns</p>
-                </div>
-            </div>
-            <div class="large-6 medium-6 columns">
-                <div class="callout panel">
-                    <p>Six columns</p>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="large-4 medium-4 small-4 columns">
-                <div class="callout panel">
-                    <p>Four columns</p>
-                </div>
-            </div>
-            <div class="large-4 medium-4 small-4 columns">
-                <div class="callout panel">
-                    <p>Four columns</p>
-                </div>
-            </div>
-            <div class="large-4 medium-4 small-4 columns">
-                <div class="callout panel">
-                    <p>Four columns</p>
-                </div>
-            </div>
-        </div>
 
-        <hr />
 
-        <h5>We bet you&rsquo;ll need a form somewhere:</h5>
-        <form>
-            <div class="row">
-                <div class="large-12 columns">
-                    <label>Input Label</label>
-                    <input type="text" placeholder="large-12.columns" />
-                </div>
-            </div>
-            <div class="row">
-                <div class="large-4 medium-4 columns">
-                    <label>Input Label</label>
-                    <input type="text" placeholder="large-4.columns" />
-                </div>
-                <div class="large-4 medium-4 columns">
-                    <label>Input Label</label>
-                    <input type="text" placeholder="large-4.columns" />
-                </div>
-                <div class="large-4 medium-4 columns">
-                    <div class="row collapse">
-                        <label>Input Label</label>
-                        <div class="small-9 columns">
-                            <input type="text" placeholder="small-9.columns" />
-                        </div>
-                        <div class="small-3 columns">
-                            <span class="postfix">.com</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="large-12 columns">
-                    <label>Select Box</label>
-                    <select>
-                        <option value="husker">Husker</option>
-                        <option value="starbuck">Starbuck</option>
-                        <option value="hotdog">Hot Dog</option>
-                        <option value="apollo">Apollo</option>
-                    </select>
-                </div>
-            </div>
-            <div class="row">
-                <div class="large-6 medium-6 columns">
-                    <label>Choose Your Favorite</label>
-                    <input type="radio" name="pokemon" value="Red" id="pokemonRed"><label for="pokemonRed">Radio 1</label>
-                    <input type="radio" name="pokemon" value="Blue" id="pokemonBlue"><label for="pokemonBlue">Radio 2</label>
-                </div>
-                <div class="large-6 medium-6 columns">
-                    <label>Check these out</label>
-                    <input id="checkbox1" type="checkbox"><label for="checkbox1">Checkbox 1</label>
-                    <input id="checkbox2" type="checkbox"><label for="checkbox2">Checkbox 2</label>
-                </div>
-            </div>
-            <div class="row">
-                <div class="large-12 columns">
-                    <label>Textarea Label</label>
-                    <textarea placeholder="small-12.columns"></textarea>
-                </div>
-            </div>
-        </form>
-    </div>
-
-    <div class="large-4 medium-4 columns">
-        <h5>Try one of these buttons:</h5>
-        <p><a href="#" class="small button">Simple Button</a><br/>
-            <a href="#" class="small radius button">Radius Button</a><br/>
-            <a href="#" class="small round button">Round Button</a><br/>
-            <a href="#" class="medium success button">Success Btn</a><br/>
-            <a href="#" class="medium alert button">Alert Btn</a><br/>
-            <a href="#" class="medium secondary button">Secondary Btn</a></p>
-        <div class="panel">
-            <h5>So many components, girl!</h5>
-            <p>A whole kitchen sink of goodies comes with Foundation. Checkout the docs to see them all, along with details on making them your own.</p>
-            <a href="http://foundation.zurb.com/docs/" class="small button">Go to Foundation Docs</a>
-        </div>
-    </div>
-</div>
 
 <script src="js/vendor/jquery.js"></script>
 <script src="js/foundation.min.js"></script>
