--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="row">
                 <div class="large-4 medium-6 small-12 columns">
                 <ul class="list" >
-                    <li ng-click="main.routeId=route.id" ng-repeat="route in main.routes"><a href="#">{{route.name}}</a></li>
+                    <li ng-click="main.getRoute(route.id)" ng-repeat="route in main.routes"><a href="#">{{route.name}}</a></li>
 
                 </ul>
                 </div>
