--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <title>BuzzStop</title>
     <link rel="stylesheet" href="css/foundation.css" />
     <script src="js/vendor/modernizr.js"></script>
+
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.13/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.13/angular-resource.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.13/angular-route.min.js"></script>
+    <script src="bower_components/angularjs-geolocation/src/geolocation.js"></script>
     <script src="https://cdn.firebase.com/js/client/1.0.18/firebase.js"></script>
     <script src="https://cdn.firebase.com/libs/angularfire/0.8.0/angularfire.min.js"></script>
 
@@ -59,13 +61,19 @@
 
             <div class="row">
                 <div class="large-4 medium-6 small-12 columns">
+                    <h3>Your Location</h3>
+                    <p>Lat/Lon: {{me.lat}},{{me.long}}</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="large-4 medium-6 small-12 columns">
                     <h3>Choose your destination</h3>
                 </div>
             </div>
             <div class="row">
                 <div class="large-4 medium-6 small-12 columns">
                     <ul class="list" >
-                        <li ng-repeat="stop in main.route.stops"><a href="#">{{stop.name}}</a><small>{{stop.lat}},{{stop.lon}}</small></li>
+                        <li ng-class="" ng-repeat="stop in main.route.stops"><a href="#">{{stop.name}}</a><small>{{stop.lat}},{{stop.lon}}</small></li>
 
                     </ul>
                 </div>
