--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.13/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.13/angular-resource.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.13/angular-route.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.13/angular-touch.js"></script>
     <script src="bower_components/angularjs-geolocation/src/geolocation.js"></script>
     <script src="https://cdn.firebase.com/js/client/1.0.18/firebase.js"></script>
     <script src="https://cdn.firebase.com/libs/angularfire/0.8.0/angularfire.min.js"></script>
@@ -26,30 +27,46 @@
 
 <div class="row" ng-show="1==1">
 <div class="large-12 columns">
-<h1 style="color:red;">BuzzStop</h1>
+
 </div>
 </div>
 
-<div class="row" ng-show="main.routeId == 0">
-    <div class="large-12 columns">
-        <div class="panel">
+<div class="row"
+     ng-click="main.vanity = false"
+     ng-show="main.vanity == true"
+        >
+    <img src="img/logo.png"/>
+</div>
 
-            <div class="row">
-                <div class="large-4 medium-6 small-12 columns">
-                    <h3>Choose your route</h3>
-                </div>
-            </div>
-            <div class="row">
-                <div class="large-4 medium-6 small-12 columns">
-                <ul class="list" >
-                    <li ng-click="main.getRoute(route.id)" ng-repeat="route in main.routes"><a href="#">{{route.name}}</a></li>
+<div class="row"
+     ng-click="main.intro = false"
+     ng-show="main.intro == true && main.vanity == false"
+>
+    <div class="large-12 columns ">
+        <h1 class="massive"  ng-class="{color1:main.routeId==0}">Find me a bus route</h1>
+    </div>
+</div>
 
-                </ul>
-                </div>
-            </div>
-            <div class="row">
 
-            </div>
+
+<div class="row"
+     ng-swipe-left="main.nextRoute()"
+     ng-swipe-right="main.lastRoute()"
+     ng-show="main.routeId == 0 && main.intro == false"
+>
+    <div class="large-12 small-12 medium-12 columns ">
+        <div class="large-4 medium-6 small-12 columns">
+            <h1 class="color1">Swipe left or right to view routes</h1>
+            <h1 class="color1">Tap your bus route</h1>
+
+            <ul class="list">
+                <li
+                    ng-click="main.getRoute(route.id)"
+                    ng-repeat="route in main.routes"
+                    ng-show="main.routePreview == route.id"
+                ><h1 ng-class="{color1:main.routeId==0}">{{route.name}}</h1></li>
+
+            </ul>
         </div>
     </div>
 </div>
@@ -62,7 +79,7 @@
 
             <div class="row">
                 <div class="large-4 medium-6 small-12 columns">
-                    <h3>Your Location</h3>
+                    <h3>Your Location</h3>{{main.destinationId}}
                     <p>Lat/Lon: {{me.lat}},{{me.long}}</p>
                 </div>
             </div>
@@ -74,7 +91,9 @@
             <div class="row">
                 <div class="large-4 medium-6 small-12 columns">
                     <ul class="list" >
-                        <li ng-class="" ng-repeat="stop in main.route.stops"><a href="#">{{stop.name}}</a><small>{{stop.lat}},{{stop.lon}}</small></li>
+                        <li ng-click="main.destinationId = stop.id"
+                            ng-class="{highlight: main.destinationId == stop.id}"
+                            ng-repeat="stop in main.route.stops"><a href="#">{{stop.name}}</a><small>{{stop.lat}},{{stop.lon}}</small></li>
 
                     </ul>
                 </div>
