--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
             <div class="row">
                 <div class="large-4 medium-6 small-12 columns">
-                    <h3>Your Location</h3>{{main.destinationId}}
+                    <h3>Your Location</h3>
                     <p>Lat/Lon: {{me.lat}},{{me.long}}</p>
                 </div>
             </div>
@@ -89,23 +89,20 @@
             </div>
             <div class="row">
                 <div class="large-4 medium-6 small-12 columns">
-                    <ul class="list" >
+                    <ul class="list stops" >
                         <li ng-click="main.destinationId = stop.id"
-                            ng-class="{highlight: main.destinationId == stop.id}"
+                            ng-class="{dest: main.destinationId == stop.id,closest: main.getDistance(stop) < 0.02}"
                             ng-repeat="stop in main.route.stops"
                         >
                             <a href="#">{{stop.name}}</a>
-                            <small>{{stop.lat}},{{stop.lon}}</small>
-                            <small>Distance: {{main.getDistance(stop)}}km</small>
+                           Distance: {{main.getDistance(stop)}}km
                         </li>
 
                     </ul>
                 </div>
             </div>
             <div class="row">
-
-                <h1 ng-click="main.locateMe()">Update Location</h1>
-
+                <h3 ng-click="main.locateMe()">Update Location</h3>
             </div>
         </div>
     </div>
